--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-scripts": "^4.0.3",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.1.1",
-    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "sass": "^1.38.2",
@@ -58,6 +57,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "redux-logger": "^3.0.6"
   }
 }
