--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "crwn-clothing",
   "version": "0.1.0",
+  "homepage":"/build",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -18,6 +19,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "sass": "^1.38.2",
+    "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
