--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "crwn-clothing",
   "version": "0.1.0",
-  "homepage":"/build",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -59,7 +58,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.4.1",
+    "prettier": "2.4.1",
     "redux-logger": "^3.0.6"
   }
 }
