--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "sass": "^1.38.2",
     "styled-components": "^5.3.3",
